--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     "header"
     "main"
     "footer";
-    /*grid-template-rows: 100px 1fr 100px;*/
+    grid-template-rows: 100px 1fr 100px;
 }
 
 header{
