--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,11 @@ body{
 
 header{
     grid-area: header;
-    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 100px;
+
 }
 main{
     grid-area: main;
